# logger

./: .gitignore  CMakeLists.txt  README.md  debug.sh  effective_msg.proto  reader_public.pem  run.sh  writer.pem
include/: compression_interface.h  decryptor.h  effective_formatter.h  effective_msg.pb.h  encryptor.h  executor.h  file_manager.h  formatter.h  logger_client.h  mem_mapper.h  scheduler.h  sink.h  threadpool.h  util.h  zlib_compress.h
src/: effective_formatter.cpp  effective_msg.pb.cc  encryptor.cpp  executor.cpp  file_manager.cpp  main.cpp  mem_mapper.cpp  scheduler.cpp  sink.cpp  threadpool.cpp  zlib_compress.cpp
tests/: test_effective_formatter.cpp  test_encrypt_roundtrip.cpp  test_zlib_roundtrip.cpp
